--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     # command: python manage.py runserver 0.0.0.0:8000
     command: gunicorn cf.wsgi:application --bind 0.0.0.0:8008
     volumes:
-      - ./app/:/usr/src/app/
+      - ./app/:/home/app/web
     #   - static_volume:/home/app/web/staticfiles
     #   - media_volume:/home/app/web/mediafiles
 
