docker dev server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   web:
     build: ./app
-    # command: python manage.py runserver 0.0.0.0:8000
-    command: gunicorn cf.wsgi:application --bind 0.0.0.0:8008
+    command: python manage.py runserver 0.0.0.0:8008
+    # command: gunicorn cf.wsgi:application --bind 0.0.0.0:8008
     volumes:
       - ./app/:/usr/src/app/
     #   - static_volume:/home/app/web/staticfiles
