--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - ./app/:/usr/src/app/
     #   - static_volume:/home/app/web/staticfiles
     #   - media_volume:/home/app/web/mediafiles
+    restart: always
 
     env_file:
       - ./.env
